correção no Unity of Work

--- a/RGB.curso.WebPedidos/Views/Shared/_Layout.cshtml
+++ b/RGB.curso.WebPedidos/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Clientes", "Index", "Cliente")</li>
                     <li>@Html.ActionLink("Produtos", "About", "Home")</li>
-                    <li>@Html.ActionLink("Fornecedores", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Fornecedores", "Index", "Fornecedor")</li>
                 </ul>
             </div>
         </div>
